# fastapi-sample

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  orm.py  pyproject.toml  requirements.txt  restart.sh
app/: main.py
app/core/: database.py  dependencies.py
app/core/security/: authHandler.py  hashHelper.py
app/db/models/: caliber.py  cartridge.py  firearm.py  user.py
app/db/repositories/: base.py  user.py
app/db/schemas/: user.py
app/routes/: auth.py  user.py
app/schemas/: user.py
app/service/: user.py
app/utils/: protectRoute.py
app/validator/: user.py
